# Adjudicator Edge Function - Recent Changes

## Latest Updates

### Enhanced Batch Processing
- **Batch Key System**: Implemented unique batch keys to prevent duplicate processing
- **Configurable Batch Sizes**: Support for different batch sizes based on model limits
- **Efficient Processing**: Optimized for handling large volumes of comments
- **Memory Management**: Improved memory usage with cleanup

### Improved AI Integration
- **Multiple Provider Support**: Enhanced support for OpenAI and Azure OpenAI
- **Model Configuration**: Uses same configuration system as scan-comments
- **Temperature Control**: Support for configurable temperature settings
- **Token Limit Optimization**: Better token usage and limit management

### Free Processing Model
- **No Credit Consumption**: Adjudication is completely free for users
- **Value-Added Service**: Provides additional accuracy without cost
- **Encourages Dual-AI**: Promotes use of dual-AI approach for better results
- **User-Friendly**: Transparent pricing model

### Enhanced Error Handling
- **Graceful Degradation**: Continues processing even when some AI calls fail
- **Fallback Mechanisms**: Uses Scan A results when adjudication fails
- **Comprehensive Logging**: Detailed error tracking and debugging
- **Robust Recovery**: Better handling of partial failures

### Duplicate Prevention
- **Global DB Log Check**: Added run-scoped identical-input check to skip duplicate adjudications
- **Batch Key System**: Unique identifiers for each batch
- **Database Checks**: Prevents duplicates across function restarts
- **In-Memory Guards**: Prevents duplicates within same execution
- **Scan Run ID Correlation**: Better tracking and correlation

### Result Mapping Fix
- **Stable ID Mapping**: Results now map by `originalRow` or `scannedIndex` (fallback to sequence) instead of array index
- **Reasoning Propagation**: Ensures adjudication reasoning is returned when available

### Result Processing Improvements